Update JDK to 17